force-app/main/default/objects/DMAPP__Dealmaker_Powerpoint__c/DMAPP__Dealmaker_Powerpoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use this custom setting to specify what information is included in PowerPoint files generated by Dealmaker.</description>
    <label>Dealmaker Powerpoint</label>
</CustomObject>