force-app/main/default/objects/DMAPP__Dealmaker_Powerpoint__c/fields/DMAPP__AM_Add_Strategy_Map__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__AM_Add_Strategy_Map__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When this setting is enabled, insight map data can be included in account plan Powerpoint exports.</description>
    <inlineHelpText>When this setting is enabled, insight map data can be included in account plan Powerpoint exports.</inlineHelpText>
    <label>AM Add Strategy Map</label>
    <type>Checkbox</type>
</CustomField>