force-app/main/default/objects/DMAPP__Dealmaker_Powerpoint__c/fields/DMAPP__Custom_Skin__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Custom_Skin__c</fullName>
    <label>Custom Skin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>