force-app/main/default/objects/DMAPP__Dealmaker_Powerpoint__c/fields/DMAPP__OM_Add_Insight_Maps__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__OM_Add_Insight_Maps__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to include insight data from Smart Opportunity Manager in the PowerPoint file.</description>
    <inlineHelpText>Check this box to include insight data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
    <label>OM Add Insight Maps</label>
    <type>Checkbox</type>
</CustomField>